fixes on IE7

--- a/styles/main.less
+++ b/styles/main.less
@@ -561,6 +561,18 @@ body {
 }
 
 /* IE7 */
+.ie7 {
+
+  .columnizer-col4 { width: 24.2%; }
+
+  #pop-links  {
+    background:#333333;
+    li {
+      margin-bottom: 10px;
+    }
+  }
+}
+
 .lt-ie9 {
   #container-for-logo-title, #main-region {
     background-color: #F7F6F0;
